# newsextractor

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PRE_LAUNCH_CHECKLIST.md  QUICK_START.md  README.md  __init__.py  demo.ipynb  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
core/: __init__.py  content_parser.py  http_client.py  language_processor.py  metadata_extractor.py  news_extractor.py  nlp_processor.py  rss_parser.py  translator.py  trending.py
models/: __init__.py  article.py
tests/: test_newsextractor.py
utils/: __init__.py  exceptions.py  helpers.py  selectors.py  validators.py
